[package]
name = "pathtr"
version = "0.1.0"
authors = ["Jonathan Karlsson <karlsjona@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "*", features = ["derive"] }
cpuprofiler = "*"
image = "*"
itertools = "*"
rand = "*"
rand_xorshift = "*"
sdl2 = "*"
threadpool = "*"
time = "*"

[profile.release]
debug = true
